syntax = "proto3";

package ova.conference.api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ozonva/ova-conference-api/pkg/ova-conference-api";

service Conferences{
  rpc CreateConference(CreateConferenceRequest) returns (ConferenceResponse){};
  rpc DescribeConference(EntityConferenceRequest) returns (ConferenceResponse){};
  rpc ListConference(ListConferenceRequest) returns (ListConferenceResponse){};
  rpc RemoveConference(EntityConferenceRequest) returns (google.protobuf.Empty){};
}

message ListConferenceRequest{
int64 offset = 1;
int64 limit = 2;
}

message CreateConferenceRequest{
  string name = 1;
  google.protobuf.Timestamp eventTime = 2;
  int32 participantCount = 3;
  int32 speakerCount = 4;
}

message EntityConferenceRequest{
  int64 id = 1;
}

message ListConferenceResponse{
  repeated ConferenceResponse Items = 1;
}

message ConferenceResponse{
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp eventTime = 3;
  int32 participantCount = 4;
  int32 speakerCount = 5;
}
